Autoweb pages are added

--- a/_app/pug/autoweb/1-main.pug
+++ b/_app/pug/autoweb/1-main.pug
@@ -13,7 +13,7 @@ section#main
 					| цены растут, как на дрожжах!
 				.main-info
 					p.main-info-text Дата и время проведения: 
-						span 16 июня, в 19:00 (мск)
+						span <?= $dateDay1Text;?> <?= $dateMonthText;?>, в 19:00 (мск)
 					p.main-info-text Ведущий: 
 						span Юрий Медушенко
 			.col-md-6
