--- a/_app/pug/main/4-plan.pug
+++ b/_app/pug/main/4-plan.pug
@@ -10,7 +10,7 @@ section#plan
 							li Почему Сочи — перспективный регион для инвестиций
 							li ИЖС: преимущества и доходность
 							li Космические цены: 400 тыс.руб. за 1 кв.м. – это не предел
-							li Презентация 2 новых инвестпроектов по доходной недвижимости 
+							li Презентация нового инвестпроекта по доходной недвижимости 
 								br
 								| в Сочи
 							li Наша инвестиционная стратегия с доходностью до 153% в год
