--- a/_app/autoweb.pug
+++ b/_app/autoweb.pug
@@ -44,7 +44,7 @@ html(lang="ru")
 			include pug/main/3-why
 			include pug/main/4-plan
 			include pug/main/5-author
-			include pug/autoweb/2-form
+			include pug/autoweb/6-form-2
 			include pug/main/8-last
 		include pug/autoweb/9-modal
 		include pug/base/3-scripts
